<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Doctor Patient</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Patients</item>
        <item >Graphical Reports</item>
        <item >Income</item>
        <item >Backup</item>
     </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/patient</item>
        <item>@drawable/income</item>
        <item>@drawable/ic_graph</item>
        <item>@drawable/ic_backup</item>
       
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="email">EMail ID</string>
    <string name="phone">Phone Number</string>
    <string name="other">Others</string>
    <string name="new_patient">New Patient</string>
    <string name="chiefComplaint">CHIEF COMPLAINTS</string>
    <string name="note">Note</string>
    <string name="next">Next</string>
    <string name="historyOfIllness">HISTORY OF\nPRESENT ILLNESS</string>
    <string name="medicalHistory">MEDICAL\nHISTORY</string>
    <string name="personalHistory">Personal History</string>
    <string name="generalExamination">General Examination</string>
    <string name="sytemExamination">SYSTEM\nEXAMINATION</string>
    <string name="presentingillness">Presenting Illness</string>
    <string name="provisionalDiagnosis">PROVISIONAL\nDIAGNOSIS</string>
    <string name="investigation">Investigation</string>
    <string name="finalDignosis">Final Dignosis</string>
    <string name="fee">Fee</string>
    <string name="socialHistory">Social History</string>
    <string name="sexual">" Obstetric/Gynecological history"</string>
    <string name="patient_details">PATIENT\nDETAIL</string>
    <string name="history_of_illness_hpc">History Of Presenting Illness</string>
    <string name="past_medical_history">Past Medical History</string>
    <string name="family_history">FAMILY\nDISEASE</string>
    <string name="social_history">SOCIAL\nHISTORY</string>
    <string name="physical_examination">PHYSICAL\nEXAMINATION</string>
    <string name="investigations">Investigations Lab Results</string>
    <string name="allergies">ALLERGY\nFACTOR</string>
    <string name="case_summary">CASE SUMMARY</string>
    <string name="chief_complaints">Chief complaints</string>
    <string name="current_medications">CURRENT\nMEDICATION</string>
    <string name="laboratory_results">LABORATORY\nRESULTS"</string>
    <string name="differential_diagnosis">DIFFERENTIAL\nDIAGNOSIS</string>
    <string name="recentvisit">RECENT VISTS</string>
    <string name="caseSummary">Case Summary</string>
    <string name="family_diseases">Family Diseases</string>
    
    <string name="otherapps">Other Apps</string>
     <string name="aboutus">About Us</string>   
      <string name="nikhil">Nikhil Vijayakumar</string>   
       <string name="amal">Amaldev T.A.</string> 
        <string name="develop">Developed by</string>  
          <string name="blog">http://androidsourcecod.blogspot.in/2015/04/my-credentials-android-app.html</string>  

</resources>
