<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_new_patient"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/diagnosis_background"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:weightSum="100" >

    <TableRow
        android:id="@+id/tableRow_search1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="12"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/new_patient_reg_margin_bottom"
            android:layout_marginLeft="@dimen/new_patient_reg_margin_left"
            android:layout_marginTop="@dimen/new_patient_reg_margin_top"
            android:orientation="horizontal"
            android:weightSum="100" >

            <Button
                android:id="@+id/button_patient_details_update"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/new_patient_reg_margin_right"
                android:layout_weight="20"
                android:background="@drawable/button"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/patient_details"
                android:textSize="12sp" />

            <Button
                android:id="@+id/button_medical_history"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/new_patient_reg_margin_right"
                android:layout_weight="20"
                android:background="@drawable/button"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/medicalHistory"
                android:textSize="12sp" />

            <Button
                android:id="@+id/button_family_history"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/new_patient_reg_margin_right"
                android:layout_weight="20"
                android:background="@drawable/button"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/family_history"
                android:textSize="12sp" />

            <Button
                android:id="@+id/button_social_history"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/new_patient_reg_margin_right"
                android:layout_weight="20"
                android:background="@drawable/button"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/social_history"
                android:textSize="12sp" />

            <Button
                android:id="@+id/button_allergies"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/new_patient_reg_margin_right"
                android:layout_weight="20"
                android:background="@drawable/button"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/allergies"
                android:textSize="12sp" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow_search2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="22"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/new_patient_reg_margin_bottom"
            android:layout_marginLeft="@dimen/new_patient_reg_margin_left"
            android:layout_marginTop="@dimen/new_patient_reg_margin_top"
            android:orientation="horizontal"
            android:weightSum="100" >

            <Button
                android:id="@+id/button_chief_complaints"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/new_patient_reg_margin_right"
                android:layout_weight="35"
                android:background="@drawable/button"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/chiefComplaint" />

            <Button
                android:id="@+id/button_history_of_illness"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/new_patient_reg_margin_right"
                android:layout_weight="65"
                android:background="@drawable/button"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/history_of_illness_hpc" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow_search3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="22"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/new_patient_reg_margin_bottom"
            android:layout_marginLeft="@dimen/new_patient_reg_margin_left"
            android:layout_marginTop="@dimen/new_patient_reg_margin_top"
            android:orientation="horizontal"
            android:weightSum="120" >

            <Button
                android:id="@+id/button_current_medications"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/new_patient_reg_margin_right"
                android:layout_weight="40"
                android:background="@drawable/button"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/current_medications" />

            <Button
                android:id="@+id/button_physical_examination"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/new_patient_reg_margin_right"
                android:layout_weight="40"
                android:background="@drawable/button"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/physical_examination" />

            <Button
                android:id="@+id/button_system_examination"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/new_patient_reg_margin_right"
                android:layout_weight="40"
                android:background="@drawable/button"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/sytemExamination" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow_search4"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="22"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/new_patient_reg_margin_bottom"
            android:layout_marginLeft="@dimen/new_patient_reg_margin_left"
            android:layout_marginTop="@dimen/new_patient_reg_margin_top"
            android:orientation="horizontal"
            android:weightSum="120" >

            <Button
                android:id="@+id/button_differential_diagnosis"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/new_patient_reg_margin_right"
                android:layout_weight="40"
                android:background="@drawable/button"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/differential_diagnosis" />

            <Button
                android:id="@+id/button_provisional_diagnosis"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/new_patient_reg_margin_right"
                android:layout_weight="40"
                android:background="@drawable/button"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/provisionalDiagnosis" />

            <Button
                android:id="@+id/button_laboratory_results"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/new_patient_reg_margin_right"
                android:layout_weight="40"
                android:background="@drawable/button"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/laboratory_results" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow_search5"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="22"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/new_patient_reg_margin_bottom"
            android:layout_marginLeft="@dimen/new_patient_reg_margin_left"
            android:layout_marginTop="@dimen/new_patient_reg_margin_top"
            android:orientation="horizontal"
            android:weightSum="100" >

            <Button
                android:id="@+id/button_view_patient_history"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/new_patient_reg_margin_right"
                android:layout_weight="65"
                android:background="@drawable/button"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/recentvisit" />

            <Button
                android:id="@+id/button_case_summary"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/new_patient_reg_margin_right"
                android:layout_weight="35"
                android:background="@drawable/button"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/case_summary" />
        </LinearLayout>
    </TableRow>

</TableLayout>